feat: simplify and package algorithm debug agent runtime